--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=bookstore
+spring.application.name=spring-boot-app
 # postgresql details
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://postgres-service:5432/compose-postgres
+spring.datasource.username=compose-postgres
+spring.datasource.password=compose-postgres
 
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=create-drop
