--- a/frontend/deployment.yml
+++ b/frontend/deployment.yml
@@ -14,6 +14,38 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: szymongrabski/react-app
+          image: szymongrabski/react-app:2.0.0
           ports:
-            - containerPort: 3000
+            - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: react-service
+spec:
+  selector:
+    app: react-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: react-app-ingress
+spec:
+  rules:
+    - host: my-app.grabski.com
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: react-service
+                port:
+                  number: 80
+
+
