resources not working

--- a/kubernetes/react-app-deployment.yml
+++ b/kubernetes/react-app-deployment.yml
@@ -17,3 +17,10 @@ spec:
           image: szymongrabski/react-app
           ports:
             - containerPort: 3000
+#          resources:
+#            requests:
+#              cpu: "100m"
+#              memory: "128Mi"
+#            limits:
+#              cpu: "200m"
+#              memory: "256Mi"
